# ognevny.github.io

./: .gitignore  README.md  _config.yml  about.md  mkdocs.yml  pyproject.toml  renovate.json  ru_about.md
.github/workflows/: main.yml
overrides/: main.html
web/: index.md  ru.md
web/abouts/: whoami.md
web/ru/abouts/: whoami.md
web/stylesheets/: extra.css
