[project]
name = "ognevny.page"
version = "1.0"
description = ""
authors = [{ name = "Maksim Bondarenkov", email = "maksapple2306@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.1.2,<2",
    "mkdocs-material>=9.5.0,<10",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
