[project]
name = "ognevny.page"
version = "1.0"
description = "The page for ognevny"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Maksim Bondarenkov", email = "maksapple2306@gmail.com" }]
dependencies = []

[dependency-groups]
dev = [
  "zensical>=0.0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
